@@ -128,12 +128,6 @@ class Check(object):
 
         # check the previous history entry is a parent of this entry
         if rev.parent_ids:
-            if last_rev_id is None and rev_history_position is not None:
-                # what if the start is a ghost ? i.e. conceptually the 
-                # baz imports
-                raise BzrCheckError("revision {%s} has %d parents, but is the "
-                                    "start of the branch"
-                                    % (rev_id, len(rev.parent_ids)))
             if last_rev_id is not None:
                 for parent_id in rev.parent_ids:
                     if parent_id == last_rev_id:
